--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,7 @@ jobs:
         with:
           node-version: 16
 
-      - uses: actions/cache@v2
+      - uses: actions/cache@v3
         name: Cache node_modules
         with:
           path: '**/node_modules'
@@ -28,7 +28,7 @@ jobs:
       - name: Build
         run: yarn build
 
-      - uses: actions/cache@v2
+      - uses: actions/cache@v3
         name: Share build
         with:
           path: 'packages/apollo-angular/build'
@@ -37,13 +37,13 @@ jobs:
       - name: Pack
         run: (cd packages/apollo-angular/build && yarn pack --filename apollo-angular.tgz && mv apollo-angular.tgz ../apollo-angular.tgz)
 
-      - uses: actions/cache@v2
+      - uses: actions/cache@v3
         name: Share tarball
         with:
           path: 'packages/apollo-angular/apollo-angular.tgz'
           key: ${{ github.sha }}
 
-      - uses: actions/cache@v2
+      - uses: actions/cache@v3
         name: Share script
         with:
           path: 'scripts/prepare-e2e.js'
@@ -62,7 +62,7 @@ jobs:
         with:
           node-version: 16
 
-      - uses: actions/cache@v2
+      - uses: actions/cache@v3
         name: Cache node_modules
         with:
           path: '**/node_modules'
@@ -73,7 +73,7 @@ jobs:
       - name: Install
         run: yarn
 
-      - uses: actions/cache@v2
+      - uses: actions/cache@v3
         name: Share build
         with:
           path: 'packages/apollo-angular/build'
@@ -83,26 +83,27 @@ jobs:
         run: yarn test --ci
 
   angular:
-    name: Test on Angular ${{ matrix.angular_version }} GraphQL ${{ matrix.graphql_version }}
+    name: Test on Angular ${{ matrix.angular_version }} GraphQL ${{ matrix.graphql_version }} Node ${{ matrix.node_version }}
     needs: build
     runs-on: ubuntu-latest
     strategy:
       matrix:
         angular_version: [14, 15]
         graphql_version: [15, 16]
+        node_version: [16, 18]
     steps:
-      - name: Use Node.js 16
+      - name: Use Node.js ${{ matrix.node_version }}
         uses: actions/setup-node@master
         with:
-          node-version: 16
+          node-version: ${{ matrix.node_version }}
 
-      - uses: actions/cache@v2
+      - uses: actions/cache@v3
         name: Share tarball
         with:
           path: 'packages/apollo-angular/apollo-angular.tgz'
           key: ${{ github.sha }}
 
-      - uses: actions/cache@v2
+      - uses: actions/cache@v3
         name: Share script
         with:
           path: 'scripts/prepare-e2e.js'
