--- a/packages/apollo-angular/package.json
+++ b/packages/apollo-angular/package.json
@@ -32,8 +32,7 @@
     "build:schematics": "tsc -p schematics/tsconfig.json && node ./scripts/move-schematics.js",
     "test": "NODE_OPTIONS=--experimental-modules jest --config jest.config.js",
     "prebuild": "rm -rf build/",
-    "deploy": "yarn build && cd build/ && npm publish --access public --registry https://registry.npmjs.org/",
-    "deploy:next": "yarn build && cd build/ && npm publish --access public --registry https://registry.npmjs.org/ --tag next"
+    "release": "yarn build && changeset publish"
   },
   "peerDependencies": {
     "@angular/core": "^14.0.0 || ^15.0.0",
@@ -43,6 +42,10 @@
   },
   "dependencies": {
     "tslib": "^2.0.0"
+  },
+  "publishConfig": {
+    "directory": "build",
+    "access": "public"
   },
   "schematics": "./schematics/collection.json",
   "ng-update": {
