--- a/packages/apollo-angular/tsconfig.json
+++ b/packages/apollo-angular/tsconfig.json
@@ -3,13 +3,11 @@
   "compilerOptions": {
     "rootDir": ".",
     "baseUrl": ".",
-    "outDir": "build"
+    "outDir": "build",
+    "strictNullChecks": true
   },
   "angularCompilerOptions": {
     "enableIvy": false
   },
-  "include": [
-    "src/**/*.ts",
-    "tests/**/*.ts"
-  ]
+  "include": ["src/**/*.ts", "tests/**/*.ts"]
 }
