--- a/package.json
+++ b/package.json
@@ -1,69 +1,74 @@
 {
   "name": "apollo-angular-monorepo",
-  "private": true,
   "license": "MIT",
-  "engines": {
-    "node": ">=14"
-  },
-  "scripts": {
-    "postinstall": "yarn workspace website patch-package",
-    "prebuild": "rimraf packages/*/build/",
-    "build": "yarn workspaces run build",
-    "test": "yarn workspaces run test",
-    "format": "prettier --write \"packages/**/*.ts\"",
-    "deploy": "yarn workspaces run deploy",
-    "now-build": "(cd website && yarn && yarn build && mv build ../public)",
-    "ci-only:integration": "./scripts/integration tests"
-  },
+  "private": true,
   "workspaces": {
     "packages": [
       "packages/*",
       "website"
     ]
   },
+  "engines": {
+    "node": ">=14"
+  },
+  "scripts": {
+    "build": "yarn workspaces run build",
+    "ci-only:integration": "./scripts/integration tests",
+    "deploy": "yarn workspaces run deploy",
+    "format": "prettier --write \"packages/**/*.ts\"",
+    "now-build": "(cd website && yarn && yarn build && mv build ../public)",
+    "postinstall": "yarn workspace website patch-package",
+    "prebuild": "rem rimraf packages/*/build/",
+    "test": "yarn workspaces run test"
+  },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^14.0.6",
-    "@angular-devkit/core": "^14.0.6",
-    "@angular-devkit/schematics": "^14.0.6",
-    "@angular/animations": "^14.0.6",
-    "@angular/cli": "^14.0.6",
-    "@angular/common": "^14.0.6",
-    "@angular/compiler": "^14.0.6",
-    "@angular/compiler-cli": "^14.0.6",
-    "@angular/core": "^14.0.6",
-    "@angular/platform-browser": "^14.0.6",
-    "@angular/platform-browser-dynamic": "^14.0.6",
-    "@angular/platform-server": "^14.0.6",
-    "@angular/router": "^14.0.6",
-    "@apollo/client": "3.7.5",
-    "@babel/core": "^7.17.4",
-    "@babel/preset-env": "^7.16.11",
-    "@schematics/angular": "^14.0.6",
-    "@theguild/prettier-config": "^0.1.0",
-    "@types/jest": "28.1.8",
-    "@types/node": "16.18.11",
-    "babel-jest": "^28.1.3",
+    "@angular-devkit/build-angular": "^15.1.4",
+    "@angular-devkit/core": "^15.1.4",
+    "@angular-devkit/schematics": "^15.1.4",
+    "@angular/animations": "^15.1.3",
+    "@angular/cli": "^15.1.4",
+    "@angular/common": "^15.1.3",
+    "@angular/compiler": "^15.1.3",
+    "@angular/compiler-cli": "^15.1.3",
+    "@angular/core": "^15.1.3",
+    "@angular/platform-browser": "^15.1.3",
+    "@angular/platform-browser-dynamic": "^15.1.3",
+    "@angular/platform-server": "^15.1.3",
+    "@angular/router": "^15.1.3",
+    "@apollo/client": "3.7.7",
+    "@babel/core": "^7.20.12",
+    "@babel/preset-env": "^7.20.2",
+    "@changesets/changelog-github": "0.4.8",
+    "@changesets/cli": "^2.26.0",
+    "@schematics/angular": "^15.1.4",
+    "@theguild/prettier-config": "^1.1.1",
+    "@types/jest": "29.4.0",
+    "@types/node": "18.13.0",
+    "babel-jest": "^29.4.2",
     "browserlist": "^1.0.1",
     "cpx": "1.5.0",
     "graphql": "16.6.0",
-    "husky": "4.3.8",
-    "jest": "^28.1.3",
-    "jest-preset-angular": "^12.2.0",
+    "husky": "8.0.3",
+    "jest": "^29.4.2",
+    "jest-preset-angular": "^12.2.6",
     "jest-zone-patch": "0.0.10",
-    "lint-staged": "11.2.6",
-    "ng-packagr": "^14.0.3",
+    "lint-staged": "13.1.1",
+    "ng-packagr": "^15.1.1",
     "prettier": "2.8.3",
-    "react": "17.0.2",
-    "rimraf": "3.0.2",
-    "rxjs": "^7.5.4",
+    "react": "18.2.0",
+    "rimraf": "4.1.2",
+    "rxjs": "^7.8.0",
     "shelljs": "0.8.5",
-    "ts-jest": "^28.0.6",
-    "tslib": "^2.3.0",
-    "typescript": "4.8.4",
-    "zone.js": "~0.12.0",
-    "@changesets/cli": "^2.26.0",
-    "@changesets/changelog-github": "0.4.8"
+    "ts-jest": "^29.0.5",
+    "tslib": "^2.5.0",
+    "typescript": "4.9.5",
+    "zone.js": "~0.12.0"
   },
+  "browserslist": [
+    "defaults",
+    "not IE 11",
+    "maintained node versions"
+  ],
   "husky": {
     "hooks": {
       "pre-commit": "lint-staged"
@@ -73,10 +78,5 @@
     "packages/**/{src,tests}/**/*.ts": [
       "prettier --write"
     ]
-  },
-  "browserslist": [
-    "defaults",
-    "not IE 11",
-    "maintained node versions"
-  ]
+  }
 }
