--- a/website/tsconfig.json
+++ b/website/tsconfig.json
@@ -14,6 +14,7 @@
     "isolatedModules": true,
     "jsx": "preserve",
     "incremental": true,
+    "strictNullChecks": true,
     "paths": {
       "@/*": ["./*"]
     }
