--- a/package.json
+++ b/package.json
@@ -24,47 +24,47 @@
     ]
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^14.0.6",
-    "@angular-devkit/core": "^14.0.6",
-    "@angular-devkit/schematics": "^14.0.6",
-    "@angular/animations": "^14.0.6",
-    "@angular/cli": "^14.0.6",
-    "@angular/common": "^14.0.6",
-    "@angular/compiler": "^14.0.6",
-    "@angular/compiler-cli": "^14.0.6",
-    "@angular/core": "^14.0.6",
-    "@angular/platform-browser": "^14.0.6",
-    "@angular/platform-browser-dynamic": "^14.0.6",
-    "@angular/platform-server": "^14.0.6",
-    "@angular/router": "^14.0.6",
+    "@angular-devkit/build-angular": "^15.1.5",
+    "@angular-devkit/core": "^15.1.5",
+    "@angular-devkit/schematics": "^15.1.5",
+    "@angular/animations": "^15.1.4",
+    "@angular/cli": "^15.1.5",
+    "@angular/common": "^15.1.4",
+    "@angular/compiler": "^15.1.4",
+    "@angular/compiler-cli": "^15.1.4",
+    "@angular/core": "^15.1.4",
+    "@angular/platform-browser": "^15.1.4",
+    "@angular/platform-browser-dynamic": "^15.1.4",
+    "@angular/platform-server": "^15.1.4",
+    "@angular/router": "^15.1.4",
     "@apollo/client": "^3.7.7",
     "@babel/core": "^7.17.4",
     "@babel/preset-env": "^7.16.11",
+    "@changesets/changelog-github": "^0.4.8",
+    "@changesets/cli": "^2.26.0",
     "@schematics/angular": "^14.0.6",
     "@theguild/prettier-config": "^0.1.0",
-    "@types/jest": "28.1.8",
-    "@types/node": "16.18.12",
+    "@types/jest": "^28.1.8",
+    "@types/node": "^16.18.12",
     "babel-jest": "^28.1.3",
     "browserlist": "^1.0.1",
-    "cpx": "1.5.0",
-    "graphql": "16.6.0",
-    "husky": "4.3.8",
+    "cpx": "^1.5.0",
+    "graphql": "^16.6.0",
+    "husky": "^4.3.8",
     "jest": "^28.1.3",
     "jest-preset-angular": "^12.2.0",
-    "jest-zone-patch": "0.0.10",
-    "lint-staged": "11.2.6",
+    "jest-zone-patch": "^0.0.10",
+    "lint-staged": "^11.2.6",
     "ng-packagr": "^14.0.3",
-    "prettier": "2.8.4",
-    "react": "17.0.2",
-    "rimraf": "3.0.2",
-    "rxjs": "^7.5.4",
-    "shelljs": "0.8.5",
+    "prettier": "^2.8.4",
+    "react": "^17.0.2",
+    "rimraf": "^3.0.2",
+    "rxjs": "^7.8.0",
+    "shelljs": "^0.8.5",
     "ts-jest": "^28.0.6",
     "tslib": "^2.3.0",
-    "typescript": "4.8.4",
-    "zone.js": "~0.12.0",
-    "@changesets/cli": "^2.26.0",
-    "@changesets/changelog-github": "0.4.8"
+    "typescript": "^4.8.4",
+    "zone.js": "~0.12.0"
   },
   "husky": {
     "hooks": {
