--- a/packages/demo/tsconfig.app.json
+++ b/packages/demo/tsconfig.app.json
@@ -2,7 +2,11 @@
   "extends": "./tsconfig.json",
   "compilerOptions": {
     "outDir": "./out-tsc/app",
-    "types": []
+    "types": [],
+    "paths": {
+      "apollo-angular": ["../apollo-angular/build"],
+      "apollo-angular/http": ["../apollo-angular/build/http"]
+    }
   },
   "files": ["src/main.ts", "src/polyfills.ts"],
   "include": ["src/**/*.d.ts"]
