--- a/packages/apollo-angular/package.json
+++ b/packages/apollo-angular/package.json
@@ -40,7 +40,7 @@
     "rxjs": "^6.0.0 || ^7.0.0"
   },
   "dependencies": {
-    "tslib": "^2.0.0"
+    "tslib": "^2.6.2"
   },
   "publishConfig": {
     "directory": "build",
@@ -57,5 +57,8 @@
       "graphql"
     ]
   },
-  "schematics": "./schematics/collection.json"
+  "schematics": "./schematics/collection.json",
+  "devDependencies": {
+    "@types/node": "^18.0"
+  }
 }
