--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,7 @@
     "declaration": true,
     "outDir": "build",
     "lib": ["es6", "dom", "esnext.asynciterable"],
-    "types": ["jest"],
+    "types": ["jest", "node"],
     "downlevelIteration": true,
     "experimentalDecorators": true,
     "noImplicitAny": true,
