--- a/packages/apollo-angular/package.json
+++ b/packages/apollo-angular/package.json
@@ -42,6 +42,9 @@
   "dependencies": {
     "tslib": "^2.6.2"
   },
+  "devDependencies": {
+    "@types/node": "^18.0"
+  },
   "publishConfig": {
     "directory": "build",
     "access": "public"
@@ -57,8 +60,5 @@
       "graphql"
     ]
   },
-  "schematics": "./schematics/collection.json",
-  "devDependencies": {
-    "@types/node": "^18.0"
-  }
+  "schematics": "./schematics/collection.json"
 }
