--- a/package.json
+++ b/package.json
@@ -62,7 +62,7 @@
     "shelljs": "^0.8.5",
     "ts-jest": "^29.1.1",
     "tslib": "^2.6.2",
-    "typescript": "^5.2.2",
+    "typescript": "5.1.6",
     "zone.js": "~0.13.1"
   },
   "husky": {
