--- a/website/package.json
+++ b/website/package.json
@@ -11,20 +11,18 @@
     "test": "echo 'nothing to do here'"
   },
   "dependencies": {
-    "@theguild/components": "5.2.2",
-    "next": "13.4.19",
-    "next-sitemap": "4.2.2",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "@theguild/components": "^6.0.1",
+    "next": "^13.5.4",
+    "next-sitemap": "^4.2.3",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@theguild/algolia": "1.1.9",
     "@theguild/tailwind-config": "0.3.0",
-    "@types/node": "18.16.16",
-    "@types/react": "18.0.37",
-    "cssnano": "6.0.1",
-    "tailwindcss": "3.3.2",
-    "typescript": "4.9.5"
+    "@types/node": "20.8.4",
+    "@types/react": "18.2.28",
+    "typescript": "5.2.2"
   },
   "browserslist": {
     "production": [
