Support Angular 17 - fixed zone.js test import - fixed tests to run according to new Schematics file tree - moved away from deprecated runSchematicAsync and runExternalSchematicAsync

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -92,7 +92,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        angular_version: [14, 15, 16]
+        angular_version: [14, 15, 16, 17]
         graphql_version: [15, 16]
         node_version: [18]
     steps:
