--- a/packages/apollo-angular/package.json
+++ b/packages/apollo-angular/package.json
@@ -1,6 +1,6 @@
 {
   "name": "apollo-angular",
-  "version": "5.0.2",
+  "version": "6.0.0",
   "description": "Use your GraphQL data in your Angular app, with the Apollo Client",
   "repository": {
     "type": "git",
@@ -34,7 +34,7 @@
     "test": "NODE_OPTIONS=--experimental-modules jest --config jest.config.js"
   },
   "peerDependencies": {
-    "@angular/core": "^14.0.0 || ^15.0.0 || ^16.0.0",
+    "@angular/core": "^14.0.0 || ^15.0.0 || ^16.0.0 || ^17.0.0",
     "@apollo/client": "^3.0.0",
     "graphql": "^15.0.0 || ^16.0.0",
     "rxjs": "^6.0.0 || ^7.0.0"
