Drop migration schematic
Because it is obsolete, unmaintained and would probably break things with standalone

--- a/packages/apollo-angular/schematics/tsconfig.json
+++ b/packages/apollo-angular/schematics/tsconfig.json
@@ -9,6 +9,6 @@
     "target": "ES2022",
     "module": "commonjs"
   },
-  "files": ["install/index.ts", "migrations/v2.ts"],
+  "files": ["install/index.ts"],
   "include": []
 }
