--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,9 @@
     "experimentalDecorators": true,
     "noImplicitAny": true,
     "noUnusedLocals": true,
-    "noUnusedParameters": true
+    "noUnusedParameters": true,
+    "strictNullChecks": true,
+    "strict": true
   },
   "angularCompilerOptions": {
     "enableResourceInlining": true,
