--- a/website/package.json
+++ b/website/package.json
@@ -4,25 +4,23 @@
   "type": "module",
   "private": true,
   "scripts": {
-    "algolia-sync": "node scripts/algolia-ci.mjs",
-    "build": "next build && next-sitemap --config next-sitemap.config.cjs && next export",
+    "build": "next build && next-sitemap",
     "dev": "next",
     "start": "next start",
     "test": "echo 'nothing to do here'"
   },
   "dependencies": {
-    "@theguild/components": "^6.0.1",
-    "next": "^13.5.4",
+    "@theguild/components": "^6.5.3",
+    "next": "^14.1.4",
     "next-sitemap": "^4.2.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@theguild/algolia": "1.1.9",
-    "@theguild/tailwind-config": "0.3.0",
-    "@types/node": "20.8.4",
+    "@theguild/tailwind-config": "0.4.1",
+    "@types/node": "20.12.7",
     "@types/react": "18.2.76",
-    "typescript": "5.2.2"
+    "typescript": "5.4.5"
   },
   "browserslist": {
     "production": [
