--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "@types/node": "^18.13.0",
     "babel-jest": "^29.6.4",
     "browserlist": "^1.0.1",
-    "cpx": "^1.5.0",
+    "cpx2": "^7.0.1",
     "graphql": "^16.8.0",
     "husky": "^9.0.0",
     "jest": "^29.6.4",
