--- a/renovate.json
+++ b/renovate.json
@@ -1,5 +1,9 @@
 {
-  "extends": ["github>the-guild-org/shared-config:renovate"],
+  "$schema": "https://docs.renovatebot.com/renovate-schema.json",
+  "extends": [
+    "github>the-guild-org/shared-config:renovate",
+    "schedule:quarterly"
+  ],
   "automerge": true,
   "packageRules": [
     {
