--- a/renovate.json
+++ b/renovate.json
@@ -1,9 +1,6 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
-  "extends": [
-    "github>the-guild-org/shared-config:renovate",
-    "schedule:quarterly"
-  ],
+  "extends": ["github>the-guild-org/shared-config:renovate", "schedule:quarterly"],
   "automerge": true,
   "packageRules": [
     {
