--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -6,6 +6,10 @@ on:
 
 jobs:
   stable:
+    permissions:
+      contents: write
+      id-token: write
+      packages: write
     uses: the-guild-org/shared-config/.github/workflows/release-stable.yml@main
     with:
       createGithubReleases: true
