--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -26,6 +26,10 @@ jobs:
       npmToken: ${{ secrets.NPM_TOKEN }}
 
   release-candidate:
+    permissions:
+      contents: write
+      id-token: write
+      packages: write
     uses: the-guild-org/shared-config/.github/workflows/release-snapshot.yml@main
     if: ${{ github.event.pull_request.title == 'Upcoming Release Changes' }}
     with:
