--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -152,6 +152,7 @@ jobs:
 
       - name: Setup E2E tests
         run: |
+          sudo apt-get update
           sudo apt-get install libgtk2.0-0t64 libgtk-3-0t64 libgbm-dev libnotify-dev libnss3 libxss1 libasound2t64 libxtst6 xauth xvfb
           (cd testapp && yarn add -D cypress-fail-on-console-error)
 
