Migrate to Vitest
Vitest replaces Jest for almost everything, because Jest still cannot
support ESM in a reasonable way. And Jasmine is used to test a CJS
version of the schematics specifically built for testing purpose,
because Vitest does not play nice with that unusual part.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -82,7 +82,7 @@ jobs:
           key: ${{ github.sha }}
 
       - name: Test
-        run: yarn test --ci
+        run: yarn test
 
   prettier:
     runs-on: ubuntu-latest
