--- a/packages/apollo-angular/headers/package.json
+++ b/packages/apollo-angular/headers/package.json
@@ -1,5 +1,6 @@
 {
   "name": "apollo-angular/headers",
+  "type": "module",
   "description": "An Apollo Link to easily transform headers from being a key-value object to an instance of HttpHeaders. Great combination with apollo-angular-link-http.",
   "author": {
     "name": "Kamil Kisiela",
