--- a/packages/apollo-angular/persisted-queries/tsconfig.json
+++ b/packages/apollo-angular/persisted-queries/tsconfig.json
@@ -3,9 +3,9 @@
   "compilerOptions": {
     "rootDir": ".",
     "baseUrl": ".",
-    "outDir": "../build/persisted-queries",
+    "outDir": "../build/testing",
     "paths": {
-      "apollo-angular": ["../"]
+      "apollo-angular": ["../src"]
     }
   },
   "include": ["src/**/*.ts", "tests/**/*.ts"]
