--- a/packages/demo/package.json
+++ b/packages/demo/package.json
@@ -1,6 +1,7 @@
 {
   "name": "demo",
   "version": "0.0.0",
+  "type": "module",
   "private": true,
   "scripts": {
     "build": "ng run demo:build:production",
