--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,11 +10,12 @@ jobs:
       contents: write
       id-token: write
       packages: write
+      issues: write
     uses: the-guild-org/shared-config/.github/workflows/release-stable.yml@main
     with:
       createGithubReleases: true
       releaseScript: release
       nodeVersion: 18
     secrets:
-      githubToken: ${{ secrets.GUILD_BOT_TOKEN }}
+      githubToken: ${{ secrets.GITHUB_TOKEN }}
       npmToken: ${{ secrets.NPM_TOKEN }}
