--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -118,6 +118,9 @@ jobs:
         angular_version: [17, 18, 19, 20]
         graphql_version: [15, 16]
         node_version: [18, 20]
+        exclude:
+          - angular_version: 20
+            node_version: 18
     steps:
       - name: Use Node.js ${{ matrix.node_version }}
         uses: actions/setup-node@master
