Drop support for Angular 17
Because it is EOL

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -115,7 +115,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        angular_version: [17, 18, 19, 20]
+        angular_version: [18, 19, 20]
         graphql_version: [15, 16]
         node_version: [18, 20]
         exclude:
