--- a/packages/apollo-angular/package.json
+++ b/packages/apollo-angular/package.json
@@ -36,7 +36,7 @@
     "test:schematics": "tsc -p schematics/tsconfig.test.json && node scripts/move-schematics.js && jasmine --config=schematics/jasmine.json"
   },
   "peerDependencies": {
-    "@angular/core": "^17.0.0 || ^18.0.0 || ^19.0.0 || ^20.0.0",
+    "@angular/core": "^18.0.0 || ^19.0.0 || ^20.0.0",
     "@apollo/client": "^3.13.1",
     "graphql": "^15.0.0 || ^16.0.0",
     "rxjs": "^6.0.0 || ^7.0.0"
