--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -117,8 +117,20 @@ jobs:
       matrix:
         angular_version: [18, 19, 20]
         graphql_version: [15, 16]
-        node_version: [18, 20]
+        node_version: [18, 20, 22, 24]
         exclude:
+          - angular_version: 18
+            node_version: 22
+
+          - angular_version: 18
+            node_version: 24
+
+          - angular_version: 19
+            node_version: 22
+
+          - angular_version: 19
+            node_version: 24
+
           - angular_version: 20
             node_version: 18
     steps:
