--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,10 +9,9 @@ jobs:
     steps:
       - uses: actions/checkout@master
 
-      - name: Use Node.js 18
-        uses: actions/setup-node@master
+      - uses: actions/setup-node@master
         with:
-          node-version: 18
+          node-version: 22
 
       - uses: actions/cache@v4
         name: Cache node_modules
@@ -59,10 +58,9 @@ jobs:
     steps:
       - uses: actions/checkout@master
 
-      - name: Use Node.js 18
-        uses: actions/setup-node@master
+      - uses: actions/setup-node@master
         with:
-          node-version: 18
+          node-version: 22
 
       - uses: actions/cache@v4
         name: Cache node_modules
@@ -89,10 +87,9 @@ jobs:
     steps:
       - uses: actions/checkout@master
 
-      - name: Use Node.js 18
-        uses: actions/setup-node@master
+      - uses: actions/setup-node@master
         with:
-          node-version: 18
+          node-version: 22
 
       - uses: actions/cache@v4
         name: Cache node_modules
