Drop support for GraphQL 15
Fixes #2324

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -113,7 +113,7 @@ jobs:
     strategy:
       matrix:
         angular_version: [18, 19, 20]
-        graphql_version: [15, 16]
+        graphql_version: [16]
         node_version: [18, 20, 22, 24]
         exclude:
           - angular_version: 18
