--- a/packages/apollo-angular/package.json
+++ b/packages/apollo-angular/package.json
@@ -38,7 +38,7 @@
   "peerDependencies": {
     "@angular/core": "^18.0.0 || ^19.0.0 || ^20.0.0",
     "@apollo/client": "^3.13.1",
-    "graphql": "^15.0.0 || ^16.0.0",
+    "graphql": "^16.0.0",
     "rxjs": "^6.0.0 || ^7.0.0"
   },
   "dependencies": {
