--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,6 +11,7 @@ jobs:
       id-token: write
       packages: write
       issues: write
+      pull-requests: write
     uses: the-guild-org/shared-config/.github/workflows/release-stable.yml@main
     with:
       createGithubReleases: true
