New repository owners

--- a/packages/apollo-angular/package.json
+++ b/packages/apollo-angular/package.json
@@ -5,15 +5,17 @@
   "description": "Use your GraphQL data in your Angular app, with the Apollo Client",
   "repository": {
     "type": "git",
-    "url": "https://github.com/kamilkisiela/apollo-angular",
+    "url": "https://github.com/Ecodev/apollo-angular",
     "directory": "packages/apollo-angular"
   },
   "homepage": "https://www.apollo-angular.com/",
-  "author": {
-    "name": "Kamil Kisiela",
-    "email": "kamil.kisiela@gmail.com",
-    "url": "https://github.com/kamilkisiela/"
-  },
+  "contributors": [
+    {
+      "name": "Kamil Kisiela",
+      "email": "kamil.kisiela@gmail.com",
+      "url": "https://github.com/kamilkisiela/"
+    }
+  ],
   "license": "MIT",
   "engines": {
     "node": ">=16"
